--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ dependencies:
 
   flutter_hooks: ^0.18.0
   hooks_riverpod: ^1.0.0-dev.7
-  youtube_explode_dart: ^1.10.6
+  youtube_explode_dart: ^1.12.3
   stream_transform: ^2.0.0
   path_provider: ^2.0.2
   path: ^1.8.0
@@ -28,17 +28,17 @@ dependencies:
   win32: ^2.2.8
   auto_size_text: ^3.0.0-nullsafety.0
   collection: ^1.15.0
-  json_annotation: ^4.0.1
-  url_launcher: ^6.0.9
+  json_annotation: ^4.7.0
   intl: ^0.17.0
   flutter_ffmpeg: ^0.4.2
   permission_handler: ^8.1.4+2
   open_file: ^3.2.1
   file_picker: ^4.0.0
+  url_launcher: ^6.1.7
 
 dev_dependencies:
   build_runner: ^2.1.1
-  json_serializable: ^4.1.1
+  json_serializable: ^6.5.4
   flutter_lints: ^1.0.0
 
 dependency_overrides:
@@ -48,3 +48,6 @@ dependency_overrides:
 flutter:
   uses-material-design: true
   generate: true
+
+  assets:
+    - assets/images/
