--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
   json_annotation: ^4.7.0
   intl: ^0.17.0
   flutter_ffmpeg: ^0.4.2
-  permission_handler: ^8.1.4+2
+  permission_handler: ^10.2.0
   open_file: ^3.2.1
   file_picker: ^4.0.0
   url_launcher: ^6.1.7
@@ -40,6 +40,7 @@ dev_dependencies:
   build_runner: ^2.1.1
   json_serializable: ^6.5.4
   flutter_lints: ^1.0.0
+  flutter_launcher_icons: "^0.11.0"
 
 dependency_overrides:
   freezed_annotation: 0.14.2
@@ -51,3 +52,21 @@ flutter:
 
   assets:
     - assets/images/
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/app-icon-512.png"
+  min_sdk_android: 21 # android min sdk min:16, default 21
+  web:
+    generate: true
+    image_path: "assets/images/app-icon-512.png"
+    background_color: "#FFFFFF"
+    theme_color: "#000000"
+  windows:
+    generate: true
+    image_path: "assets/images/app-icon-512.png"
+    icon_size: 48 # min:48, max:256, default: 48
+  macos:
+    generate: true
+    image_path: "assets/images/app-icon-512.png"
