rename apps to youtube_download because _flutter is humpf :)

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -33,7 +33,7 @@ android {
     }
 
     defaultConfig {
-        applicationId "net.hexah.youtube_downloader_flutter"
+        applicationId "net.hexah.youtube_downloader"
         minSdkVersion 24
         targetSdkVersion 30
         versionCode flutterVersionCode.toInteger()
