--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="net.hexah.youtube_downloader_flutter">
+          package="net.hexah.youtube_downloader">
     <application
             android:requestLegacyExternalStorage="true"
-            android:label="youtube_downloader_flutter"
+            android:label="youtube_downloader"
             android:icon="@mipmap/launcher_icon">
         <activity
                 android:name=".MainActivity"
