--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   open_file: ^3.2.1
   file_picker: ^4.0.0
   url_launcher: ^6.1.7
+  id3_codec: ^1.0.0
+  http: ^0.13.5
 
 dev_dependencies:
   build_runner: ^2.1.1
