--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: Downloads videos from youtube with ease!
 
 publish_to: 'none'
 
-version: 1.1.0+1
+version: 1.2.0+1
 
 environment:
   sdk: '>=2.12.0 <3.0.0'
@@ -35,6 +35,7 @@ dependencies:
   file_picker: ^4.0.0
   url_launcher: ^6.1.7
   id3_codec: ^1.0.0
+  id3tag: ^0.2.0
   http: ^0.13.5
   ffmpeg_kit_flutter_full: ^5.1.0-LTS
 
