update ffmpegmobile to full gpl ; ignore quote =;+ in names ; show pourcent in merge streams ; better quality with merge streams (set audio on video not video on audio bitrate ref)

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   id3_codec: ^1.0.0
   id3tag: ^0.2.0
   http: ^0.13.5
-  ffmpeg_kit_flutter_full: ^5.1.0-LTS
+  ffmpeg_kit_flutter_full_gpl: ^5.1.0-LTS
 
 dev_dependencies:
   build_runner: ^2.1.1
