--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: Downloads videos from youtube with ease!
 
 publish_to: 'none'
 
-version: 1.3.4+1
+version: 1.3.5+1
 
 environment:
   sdk: '>=2.12.0 <3.0.0'
@@ -16,7 +16,7 @@ dependencies:
 
   flutter_hooks: ^0.18.0
   hooks_riverpod: ^1.0.0-dev.7
-  youtube_explode_dart: ^1.12.4
+  youtube_explode_dart: ^2.0.2
   stream_transform: ^2.0.0
   path_provider: ^2.0.12
   path: ^1.8.0
@@ -36,7 +36,7 @@ dependencies:
   url_launcher: ^6.1.7
   id3_codec: ^1.0.3
   id3tag: ^0.2.0
-  http: ^0.13.5
+  http: ^1.1.0
   ffmpeg_kit_flutter_full_gpl: ^5.1.0-LTS
 
 dev_dependencies:
@@ -45,9 +45,8 @@ dev_dependencies:
   flutter_lints: ^1.0.0
   flutter_launcher_icons: "^0.11.0"
 
-dependency_overrides:
-  freezed_annotation: 0.14.2
-
+# dependency_overrides:
+#  freezed_annotation: 0.14.2
 
 flutter:
   uses-material-design: true
