--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,10 +3,10 @@ description: Downloads videos from youtube with ease!
 
 publish_to: 'none'
 
-version: 1.3.5+1
+version: 1.3.6+1
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: '>=3.2.4 <4.0.0'
 
 dependencies:
   flutter:
@@ -14,9 +14,9 @@ dependencies:
   flutter_localizations:
     sdk: flutter
 
-  flutter_hooks: ^0.18.0
-  hooks_riverpod: ^1.0.0-dev.7
-  youtube_explode_dart: ^2.0.2
+  flutter_hooks: ^0.20.5
+  hooks_riverpod: ^2.5.2
+  youtube_explode_dart: ^2.2.2
   stream_transform: ^2.0.0
   path_provider: ^2.0.12
   path: ^1.8.0
@@ -25,25 +25,25 @@ dependencies:
     git:
       url: https://github.com/google/flutter-desktop-embedding.git
       path: plugins/window_size
-  win32: ^2.2.8
+  win32: ^5.5.4
   auto_size_text: ^3.0.0-nullsafety.0
-  collection: ^1.15.0
-  json_annotation: ^4.7.0
-  intl: ^0.18.0
-  permission_handler: ^10.2.0
-  open_file: ^3.2.1
-  file_picker: ^4.0.0
-  url_launcher: ^6.1.7
+  collection: ^1.18.0
+  json_annotation: ^4.9.0
+  intl: ^0.19.0
+  permission_handler: ^11.3.1
+  open_file: ^3.5.6
+  file_picker: ^8.1.2
+  url_launcher: ^6.3.0
   id3_codec: ^1.0.3
   id3tag: ^0.2.0
-  http: ^1.1.0
+  http: ^1.2.2
   ffmpeg_kit_flutter_full_gpl: ^5.1.0-LTS
 
 dev_dependencies:
-  build_runner: ^2.1.1
-  json_serializable: ^6.5.4
+  build_runner: ^2.3.3
+  json_serializable: ^6.8.0
   flutter_lints: ^1.0.0
-  flutter_launcher_icons: "^0.11.0"
+  flutter_launcher_icons: "^0.14.0"
 
 # dependency_overrides:
 #  freezed_annotation: 0.14.2
