--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -4,9 +4,11 @@
     <application
             android:requestLegacyExternalStorage="true"
             android:label="youtube_downloader"
-            android:icon="@mipmap/launcher_icon">
+            android:icon="@mipmap/launcher_icon"
+        >
         <activity
                 android:name=".MainActivity"
+                android:exported="true"
                 android:launchMode="singleTop"
                 android:theme="@style/LaunchTheme"
                 android:configChanges="orientation|keyboardHidden|keyboard|screenSize|smallestScreenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode"
