--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: Downloads videos from youtube with ease!
 
 publish_to: 'none'
 
-version: 1.3.8+1
+version: 1.3.9+1
 
 environment:
   sdk: '>=3.2.4 <4.0.0'
@@ -15,34 +15,34 @@ dependencies:
     sdk: flutter
 
   flutter_hooks: ^0.20.5
-  hooks_riverpod: ^2.5.2
-  youtube_explode_dart: ^2.3.6
-  stream_transform: ^2.0.0
-  path_provider: ^2.0.12
+  hooks_riverpod: ^2.6.1
+  youtube_explode_dart: ^2.3.9
+  stream_transform: ^2.1.1
+  path_provider: ^2.1.5
   path: ^1.8.0
-  shared_preferences: ^2.0.7
+  shared_preferences: ^2.5.1
   window_size:
     git:
       url: https://github.com/google/flutter-desktop-embedding.git
       path: plugins/window_size
-  win32: ^5.5.4
-  auto_size_text: ^3.0.0-nullsafety.0
+  win32: ^5.10.1
+  auto_size_text: ^3.0.0
   collection: ^1.18.0
   json_annotation: ^4.9.0
   intl: ^0.19.0
   permission_handler: ^11.3.1
-  open_file: ^3.5.6
-  file_picker: ^8.1.2
-  url_launcher: ^6.3.0
+  open_file: ^3.5.10
+  file_picker: ^8.3.1
+  url_launcher: ^6.3.1
   id3_codec: ^1.0.3
   id3tag: ^0.2.0
-  http: ^1.2.2
+  http: ^1.3.0
   ffmpeg_kit_flutter_full_gpl: ^5.1.0-LTS
 
 dev_dependencies:
-  build_runner: ^2.3.3
-  json_serializable: ^6.8.0
-  flutter_lints: ^1.0.0
+  build_runner: ^2.4.14
+  json_serializable: ^6.9.3
+  flutter_lints: ^5.0.0
   flutter_launcher_icons: "^0.14.0"
 
 # dependency_overrides:
