--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,11 @@ dependencies:
   id3tag: ^0.2.0
   http: ^1.3.0
   ffmpeg_kit_flutter_full_gpl: ^5.1.0-LTS
+  # ffmpeg_kit_flutter_full_gpl: ^6.0.3
+#  ffmpeg_kit_flutter:
+#    git:
+#      url: https://github.com/MSOB7YY/ffmpeg-kit
+#      path: flutter/flutter
 
 dev_dependencies:
   build_runner: ^2.4.14
