--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,28 +16,30 @@ dependencies:
 
   flutter_hooks: ^0.21.2
   hooks_riverpod: ^2.6.1
-  youtube_explode_dart: ^2.3.10
+  youtube_explode_dart: ^2.4.2
   stream_transform: ^2.1.1
   path_provider: ^2.1.5
   path: ^1.9.1
-  shared_preferences: ^2.5.2
+  shared_preferences: ^2.5.3
   window_size:
     git:
       url: https://github.com/google/flutter-desktop-embedding.git
       path: plugins/window_size
-  win32: ^5.11.0
+  win32: ^5.14.0
   auto_size_text: ^3.0.0
   collection: ^1.19.1
   json_annotation: ^4.9.0
-  intl: ^0.19.0
-  permission_handler: ^11.4.0
+  intl: ^0.20.2
+  permission_handler: ^12.0.0+1
   open_file: ^3.5.10
-  file_picker: ^9.0.2
+  file_picker: ^10.2.0
   url_launcher: ^6.3.1
   id3_codec: ^1.0.3
   id3tag: ^0.2.0
-  http: ^1.3.0
-  ffmpeg_kit_flutter_full_gpl: ^5.1.0-LTS
+  http: ^1.4.0
+
+  ffmpeg_kit_flutter_new: ^2.0.0
+  # ffmpeg_kit_flutter_full_gpl: ^5.1.0-LTS
   # ffmpeg_kit_flutter_full_gpl: ^6.0.3
 #  ffmpeg_kit_flutter:
 #    git:
