--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,19 +37,17 @@ dependencies:
   id3_codec: ^1.0.3
   id3tag: ^0.2.0
   http: ^1.4.0
+  slugify: ^2.0.0
+  crypto: any
+
+  flutter_inappwebview: ^6.1.5
 
   ffmpeg_kit_flutter_new: ^2.0.0
-  # ffmpeg_kit_flutter_full_gpl: ^5.1.0-LTS
-  # ffmpeg_kit_flutter_full_gpl: ^6.0.3
-#  ffmpeg_kit_flutter:
-#    git:
-#      url: https://github.com/MSOB7YY/ffmpeg-kit
-#      path: flutter/flutter
 
 dev_dependencies:
-  build_runner: ^2.4.14
-  json_serializable: ^6.9.3
-  flutter_lints: ^5.0.0
+  build_runner: ^2.5.4
+  json_serializable: ^6.9.5
+  flutter_lints: ^6.0.0
   flutter_launcher_icons: "^0.14.0"
 
 # dependency_overrides:
