--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
   flutter_localizations:
     sdk: flutter
 
+  archive: ^4.0.7
+
   flutter_hooks: ^0.21.2
   hooks_riverpod: ^2.6.1
   youtube_explode_dart: ^2.4.2
@@ -39,6 +41,7 @@ dependencies:
   http: ^1.4.0
   slugify: ^2.0.0
   crypto: any
+  device_info_plus: ^11.5.0
 
   flutter_inappwebview: ^6.1.5
 
@@ -48,7 +51,7 @@ dev_dependencies:
   build_runner: ^2.5.4
   json_serializable: ^6.9.5
   flutter_lints: ^6.0.0
-  flutter_launcher_icons: "^0.14.0"
+  flutter_launcher_icons: ^0.14.4
 
 # dependency_overrides:
 #  freezed_annotation: 0.14.2
@@ -60,7 +63,7 @@ flutter:
   assets:
     - assets/images/
 
-flutter_icons:
+flutter_launcher_icons:
   android: "launcher_icon"
   ios: true
   image_path: "assets/images/app-icon-512.png"
