--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: Downloads videos from youtube with ease!
 
 publish_to: 'none'
 
-version: 1.4.11+1
+version: 1.4.12+1
 
 environment:
   sdk: '>=3.2.4 <4.0.0'
@@ -18,7 +18,10 @@ dependencies:
 
   flutter_hooks: ^0.21.2
   hooks_riverpod: ^2.6.1
-  youtube_explode_dart: ^2.4.2
+  # youtube_explode_dart: ^2.5.2
+  youtube_explode_dart:
+    git:
+      url: https://github.com/Coronon/youtube_explode_dart
   stream_transform: ^2.1.1
   path_provider: ^2.1.5
   path: ^1.9.1
@@ -27,25 +30,29 @@ dependencies:
     git:
       url: https://github.com/google/flutter-desktop-embedding.git
       path: plugins/window_size
-  win32: ^5.14.0
+  win32: ^5.15.0
   auto_size_text: ^3.0.0
   collection: ^1.19.1
   json_annotation: ^4.9.0
   intl: ^0.20.2
-  permission_handler: ^12.0.0+1
+  permission_handler: ^12.0.1
   open_file: ^3.5.10
-  file_picker: ^10.2.0
-  url_launcher: ^6.3.1
+  file_picker: ^10.3.3
+  url_launcher: ^6.3.2
   id3_codec: ^1.0.3
   id3tag: ^0.2.0
-  http: ^1.4.0
+  http: ^1.5.0
   slugify: ^2.0.0
   crypto: any
-  device_info_plus: ^11.5.0
+  device_info_plus: ^12.1.0
 
   flutter_inappwebview: ^6.1.5
 
-  ffmpeg_kit_flutter_new: ^2.0.0
+  ffmpeg_kit_flutter_new: ^3.2.0
+
+  # pour la gestion de nouvelle version
+  upgrader: ^12.1.0
+  version: ^3.0.2
 
 dev_dependencies:
   build_runner: ^2.5.4
